--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
     <meta name="renderer" content="webkit">
 
     <!-- seo 优化部分 -->
-    <meta name="title" content="金羊奖 金羊奖"/>
-    <meta name="keywords" content="金羊奖 金羊奖 金羊奖"/>
+    <meta name="title" content="习悦校招答题 习悦校招答题"/>
+    <meta name="keywords" content="习悦 校招 答题"/>
     <meta name="author" content="sherlock"/>
     <meta name="email" content="920825209@qq.com"/>
-    <meta name="Description" content="金羊奖 金羊奖"/>
+    <meta name="Description" content="习悦校招答题 习悦校招答题"/>
 
-    <title>金羊奖</title>
+    <title>习悦校招答题</title>
     <link rel="stylesheet" type="text/css" href="dist/css/all-min.css"/>
-    <link rel="stylesheet" type="text/css" href="src/css/graph@2x.css"/>
+
     <link rel="stylesheet" type="text/css" href="src/css/index.css"/>
     <link rel="stylesheet" type="text/css" href="src/css/an.css"/>
     <script src="src/js/common/zepto_base.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="src/js/m.js" type="text/javascript" charset="utf-8"></script>
+    <!--<script src="src/js/m.js" type="text/javascript" charset="utf-8"></script>-->
+    <script type="text/javascript" src="src/js/common/scroll.js"></script>
+    <script type="text/javascript" src="src/js/common/common.js"></script>
 
 </head>
 
@@ -33,227 +35,67 @@
     <div class="wrapper">
         <ul class="screen-all" id="screen-all">
 
-            <li class="screen " id="screen00">
+            <li class="screen" id="screen00">
                <div class="content hide">
-                    <div   class="content   ">
-                        <i class=" all-img ib left-decor" id="left-decor"></i>
-                        <i class=" all-img ib right-decor" id="right-decor"></i>
-                        <div class=" center-title ib all-img">
-                            <h3 class="hidden-val">二零一三年度XXX</h3>
+                        <i class="all-img heart ib"></i>
+                        <div class="text-center first-center">
+                            <div>
+                                <span class="ib all-img font-mm">
+                                    <p class="hidden-val">
+                                        谯美美
+                                    </p>
+                                </span>
+                            </div>
+                            <div style="margin-top: -12px; margin-bottom: 11px;">
+                                <span class="all-img ib font-yu">
+                                    <p class="hidden-val">$</p>
+                                </span>
+                            </div>
+                            <div>
+                                <span class="bg-circle-xy ib">
+                                    <i class="ib all-img font-xy">
+                                        <span class="hidden-val">习悦</span>
+                                    </i>
+                                </span>
+                            </div>
+                            <div>
+                               <span class="all-img ib font-say">
+                                    <p class="hidden-val">不得不说的故事</p>
+                                </span>
 
-                            <p class="hidden-val">seo优化地方</p>
-                        </div>
+                            </div>
 
-                        <div class="bottom-trinagle">
-
-                            <!-- 第1层 -->
-                            <section class="" id="trinagle-list-01">
-                                <i class="ib  trinagle-opc trinagle trinagle-pour  trinagle-sg  tran-spal-01  color-04 "></i>
-                                <i class="ib trinagle-opc  trinagle  trinagle-sg  color-04 "></i>
-                            </section>
-                            <!-- 第2层 -->
-                            <section class="" id="trinagle-list-02">
-                                <ul class="trinagle-list">
-                                    <li>
-                                        <i class="ib  trinagle-opc trinagle  color-04"></i>
-                                    </li>
-                                    <li>
-                                        <i class="ib   trinagle-opc trinagle  color-04"></i>
-                                    </li>
-                                    <li>
-
-                                        <i class="ib  trinagle-opc  trinagle   color-02"></i>
-                                    </li>
-                                    <li>
-
-                                        <i class="ib  trinagle-opc trinagle   color-02"></i>
-                                    </li>
+                                <ul class="ib circle-dot" >
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
                                 </ul>
 
-                            </section>
-                            <!-- 第3层 -->
-                            <section class="" id="trinagle-list-03">
-                                <i class="ib   trinagle-opc-6 trinagle trinagle-pour trinagle-sg  color-03"
-                                   style="position: absolute;right: -65px;bottom: 1px;"></i>
-                                <i class="ib trinagle color-03  trinagle-opc-8"
-                                   style="position: absolute; right: -35px; bottom: 60px;"></i>
-                                <i class="ib trinagle color-03  trinagle-opc-8  trinagle-pour trinagle-lg "
-                                   style="position: absolute; right: -40px; bottom: 114px;"></i>
-                                <i class="ib trinagle color-03  trinagle-pour  trinagle-opc-2  tran-spal"></i>
-                            </section>
-                            <!-- 第4层 -->
-                            <section class="hide" id="trinagle-list-04">
-                                <div class="ib" style="position: absolute; bottom: 152px; left: -15px; height: 100%;">
-                                    <i class="trinagle fadeAni  color-03 " style="position: absolute; bottom: 0;   -webkit-animation-delay : 0.2s;"></i>
-                                    <i class="trinagle fadeAni  trinagle-pour color-05" style="position: absolute; bottom: 0;left: 35px;   -webkit-animation-delay : 0.35s;"></i>
-                                    <i class="trinagle fadeAni  color-05" style="position: absolute; bottom: 0; left: 70px;   -webkit-animation-delay : 0.5s;"></i>
-                                    <i class="trinagle fadeAni trinagle-pour color-08" style="position: absolute; bottom: -60px;   -webkit-animation-delay : 0.65s;"></i>
-                                    <i class="trinagle fadeAni color-06" style="position: absolute; bottom: -60px; left: 35px;   -webkit-animation-delay : 0.8s;"></i>
-                                    <i class="trinagle  fadeAni trinagle-pour color-01" style="position: absolute; bottom: -60px;left: 70px;   -webkit-animation-delay : 0.95s;"></i>
-
-                                    <i class="ib trinagle fadeAni color-03  trinagle-opc-8  trinagle-pour trinagle-ssg"  style="-webkit-animation-delay : 2.0s;position: absolute; bottom: -47px; left: -9px;"></i>
-                                    <i class="ib trinagle fadeAni color-04  trinagle-opc-8  trinagle-pour trinagle-sg"  style="-webkit-animation-delay : 2.2s;position: absolute; bottom: -5px; left: 100px;"></i>
-                                    <i class="ib trinagle fadeAni color-02  trinagle-opc  trinagle-lg"  style="-webkit-animation-delay : 2.4s; position: absolute; bottom: 108px; left: 65px;"></i>
-                                    <i class="ib trinagle fadeAni color-05  trinagle-opc  trinagle"  style="-webkit-animation-delay : 2.4s; position: absolute; bottom: 130px; left: 126px;"></i>
-                                </div>
-
-                            </section>
-                            <!-- 第5层 -->
-                            <section class="hide" id="trinagle-list-05">
-                                <div class="ib" style="position: absolute; bottom: 152px; right: 0px; height: 100%;">
-                                        <i class="ib fadeAni trinagle trinagle-sg color-06 trinagle-opc-8 tran-spal-03" style="-webkit-animation-delay : 1.4s;" ></i>
-                                       <i class="ib fadeAni trinagle   trinagle-pour color-05 trinagle-opc  trans-spal-04 "  style="-webkit-animation-delay : 1.6s;position: absolute; right: 9px; bottom: 49px;"></i>
-                                       <i class="ib fadeAni  trinagle trinagle-pour  color-03 trinagle-opc-2 trans-spal-04" style="-webkit-animation-delay : 1.8s;position: absolute; right:  67px; bottom: 49px;"></i>
-                                </div>
-                            </section>
-
-
                         </div>
-
-                        <div class="top-trinagle hide" >
-                            <i  id="trinagleRed" class="trinagle  trinagle trinagle-lg color-09  trinagle-pour" style=" position: absolute; top: -6px; right: 29px;"></i>
-                            <i class="trinagle fadeAni trinagle-sm color-02  " style="-webkit-animation-delay : 2.6s;position: absolute; top: 38px; right: 104px;"></i>
-                        </div>
-
-                    </div>
-
-                    <div class="content hide" id="bg-main">
-
-                        <div class="bg-red">
-                            <section class="title-list">
-                                <span class="ib all-img title-01"></span></br>
-                                <span class="ib all-img title-02"></span></br>
-                                <span class="ib all-img title-03"></span></br>
-                                <span class="ib all-img title-04"></span>
-                            </section>
-                            <span class="ib left-arrow all-img arrowRight an-util-allwards"></span>
-                        </div>
-
-                    </div>
                  </div>
             </li>
-            <li class="screen bg-red " id="screen01">
-                <div class="content  ">
 
-                        <!--第二屏翻转-->
-                        <div class=""  id="scaleDom" style="">
+            <li class="screen" id="screen01" >
+                <div class="content hide">
+                    <div class="text-center wrapper">
+                          <div class="ib circle-middle">
+                              <i class="ib all-img question"></i>
+                              <i class="ib all-img huzi"></i>
+                          </div>
 
-
-                        <!--第一屏背景-->
-                        <img src="img/bg.png"  class="bg-response"  id="bg-response" />
-
-                        <span class="paper-trin paper-04"></span>
-
-                        <span class="paper-trin paper-02"></span>
-                        <span class="paper-trin paper-03" id="fourAniEnd"></span>
-
-                        <span class="paper-trin paper-01" id="paper-01"></span>
-                        <span class="paper-trin paper-05"></span>
-
-
-                            <span class="paper-trin paper-04 ver-flip"   id="paper-trin-left" ></span>
-                            <span class="paper-trin paper-05 ver-flip"   id="paper-trin-right"></span>
-                        </div>
-
-                        <div class="content "  >
-
-                            <div class="hide  nav-trinagle-main" id="nav-trinagle-main">
-                                <span num="3"  class=" nav-trinagle" >  </span>
-                                <i  num="3" class="ib font-03 all-img" style="-webkit-transform: translateZ(0)  rotateZ(157deg) scale(0.76); left: 17px;top: 5px;"></i>
-
-                                <span num="2" class=" nav-trinagle rotate-1"  > </span>
-                                <i num="2" class="ib font-01 all-img" style="-webkit-transform: translateZ(0) rotateZ(-30deg) scale(0.76); left: -42px;top: 42px;"></i>
-
-                                <span  num="1" class=" nav-trinagle rotate-2" > </span>
-                                <i num="1" class="ib font-02 all-img" style="-webkit-transform: translateZ(0) rotateZ(-30deg) scale(0.76); left: -45px;top: 108px;"></i>
-
-                                <span num="3" class=" nav-trinagle rotate-3"> </span>
-                                <i num="3" class="ib font-03 all-img" style="-webkit-transform: translateZ(0) rotateZ(-30deg) scale(0.76); left: 17px;top: 144px;"></i>
-
-                                <span num="2" class=" nav-trinagle rotate-4"></span>
-                                 <i  num="2" class="ib font-01 all-img" style="-webkit-transform: translateZ(0) rotateZ(-30deg) scale(0.75); left: 76px;top: 110px;"></i>
-
-                                <span num="1" class=" nav-trinagle rotate-5">  </span>
-                                <i  num="1" class="ib font-02 all-img" style="-webkit-transform: translateZ(0) rotateZ(-30deg) scale(0.76); left: 75px;top: 42px;"></i>
-                            </div>
-                            <div class=" hide left-content" id="left-content">
-                                <h1 class="left-content-title">贰零壹叁年度<br/>洋正獲獎作品</h1>
-
-
-                                <ul class="left-content-ul style-yellow" num="1">
-                                    <li>
-                                        <span class="left-content-badge">最佳案名</span>
-                                        <i class=" left-content-tran">▲</i>
-                                        <a href="list.html?tp=chunmaoxuan" >椿萱茂</a>
-                                    </li>
-                                    <li>
-                                        <span class="left-content-badge">最佳slgoan</span>
-                                        <i class="ib left-content-tran">▲</i>
-                                        <a href="javascript:void(0);" >中海·百賢府</a>
-                                    </li>
-
-                                    <li>
-                                        <span class="left-content-badge">最佳軟文撰寫</span>
-                                        <i class=" left-content-tran">▲</i>
-                                        <a href="javascript:void(0);">市南·金茂灣</a>
-                                    </li>
-
-                                </ul>
-                                <ul class=" hide left-content-ul style-red" num="2">
-
-                                    <li>
-                                        <span class="left-content-badge">最佳logo設計</span><br/>
-                                        <span class="left-content-badge">最佳調性控制</span><br/>
-                                        <span class="left-content-badge">最佳環境體驗</span><br/>
-                                        <span class="left-content-badge">最佳傳統媒體創意</span><br/>
-                                        <i class=" left-content-tran">▲</i>
-                                        <a href="javascript:void(0);">田州古城</a>
-                                    </li>
-                                    <li>
-                                        <span class="left-content-badge">最佳傳統媒體創意</span>
-                                        <i class="ib left-content-tran">▲</i>
-                                        <a href="javascript:void(0);" >玉龍灣</a>
-                                    </li>
-
-                                </ul>
-                                <ul class="hide left-content-ul style-blue" num="3">
-
-                                    <li>
-                                        <span class="left-content-badge">最佳策略</span>
-                                        <i class=" left-content-tran">▲</i>
-                                        <a href="javascript:void(0);">青雲天下</a>
-                                        <a href="javascript:void(0);">亦莊·金茂悅</a>
-                                    </li>
-                                    <li>
-                                        <span class="left-content-badge">最佳印刷品</span>
-                                        <i class="ib left-content-tran">▲</i>
-                                        <a href="javascript:void(0);" >TBD雲集中心</a>
-                                        <a href="javascript:void(0);" >玉龍灣</a>
-                                    </li>
-
-                                    <li>
-                                        <span class="left-content-badge">最佳數字化營銷</span>
-                                        <i class=" left-content-tran">▲</i>
-                                        <a href="javascript:void(0);">鑫苑·鑫都匯</a>
-                                        <a href="javascript:void(0);">亦莊·金茂悅</a>
-                                    </li>
-                                    <li>
-                                        <span class="left-content-badge">最佳影響力策動</span>
-                                        <i class=" left-content-tran">▲</i>
-                                        <a href="javascript:void(0);">融科·千樟墅</a>
-                                    </li>
-
-                                </ul>
-                            </div>x1
-
-                        </div>
+                          <div>
+                              <span class="ib all-img font-xy-who"><p class="hidden-val">谁是习悦</p></span>
+                          </div>
                     </div>
+
+                </div>
+
             </li>
         </ul>
     </div>
 </section>
 
 </body>
-<script src="src/js/service.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="src/js/service.js" type="text/javascript" charset="utf-8"></script>
 
 </html>
