--- a/index.html
+++ b/index.html
@@ -84,13 +84,82 @@
                           </div>
 
                           <div>
-                              <span class="ib all-img font-xy-who"><p class="hidden-val">谁是习悦</p></span>
+                              <span class="ib all-img font-xy-who mt-circle"><p class="hidden-val">谁是习悦</p></span>
                           </div>
+
+                         <div>
+
+                             <ul class="ib list-info">
+                                 <li>
+                                     <i class="trans-right trans ib"></i><span>习悦专注于教育类移动互联网</span>
+                                 </li>
+                                 <li>
+                                     <i class="trans-right trans ib"></i><span>习悦有多组丧心病狂的程序员!</span>
+                                 </li>
+                                 <li>
+                                     <i class="trans-right trans ib"></i><span>习悦有经常犯二的男神!</span>
+                                 </li>
+                                 <li>
+                                     <i class="trans-right trans ib"></i><span>习悦有执着炒作的运营!</span>
+                                 </li>
+                                 <li>
+                                     <i class="trans-right trans ib"></i><span>习悦有很牛B的产品!</span>
+                                 </li>
+                                 <li>
+                                     <i class="trans-right trans ib"></i><span>习悦有时刻为你着想的美女后盾</span>
+                                 </li>
+                             </ul>
+                         </div>
                     </div>
 
                 </div>
 
             </li>
+
+
+
+            <li class="screen" id="screen02" >
+                <div class="content hide">
+                    <div class="text-center wrapper">
+                        <div class="ib" style="position: relative;">
+                            <div class="ib circle-middle">
+
+                            </div>
+                            <i class="ib all-img women"></i>
+                        </div>
+
+                        <div>
+                            <span class="ib all-img font-why-mm mt-circle"><p class="hidden-val">谯美美 shi 谁？</p></span>
+                        </div>
+
+                        <div>
+
+                            <ul class="ib list-info  info-02">
+                                <li class="text-center">
+                                    <i class="trans-right white trans ib"></i><span>谯美美是时刻关心你的习悦人力</span>
+                                </li>
+                                <li class="text-center">
+                                    <i class="trans-right white trans ib"></i><span>，她会时刻给你创造惊喜哦~</span>
+                                </li>
+                                <li class="text-center">
+                                    <i class="trans-right white trans ib"></i><span>快看看谯美美和习悦会擦出怎样</span>
+                                </li>
+                                <li>
+                                    <i class="trans-right white trans ib"></i> <span>的火花呢?</span>
+                                </li>
+
+                            </ul>
+                        </div>
+
+
+                        <button type="button" class="btnBase"><i class="all-img font-game ib"></i></button>
+                    </div>
+
+                </div>
+
+            </li>
+
+
         </ul>
     </div>
 </section>
