--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
                                     </i>
                                 </span>
                             </div>
-                            <div>
+                            <div    style="position: relative;">
+                                <div  class="font-say-delay"></div>
                                <span class="all-img ib font-say">
+
                                     <p class="hidden-val">不得不说的故事</p>
                                 </span>
 
@@ -152,7 +154,7 @@
                         </div>
 
 
-                        <button type="button" class="btnBase"><i class="all-img font-game ib"></i></button>
+                        <button type="button" class="btnBase"   id="gameStart"><i class="all-img font-game ib"></i></button>
                     </div>
 
                 </div>
