--- a/question.html
+++ b/question.html
@@ -26,7 +26,12 @@
     <script src="src/js/common/loader.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="src/js/common/template.js"></script>
 
+    <style  type="text/css">
+        .mp_loading{
+            background-color: #ea245d   !important;
+        }
 
+    </style>
 </head>
 
 <body>
