--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                <div class="content hide">
 
                    <div class="arrow">
-                       <i class="ib icon icon-arrow  arrowUp"></i>
+                       <i class="ib icon icon-arrow-inv arrowUp"></i>
                    </div>
 
                         <i class="all-img heart ib"></i>
@@ -91,7 +91,7 @@
                 <div class="content hide">
 
                     <div class="arrow">
-                        <i class="ib icon icon-arrow  arrowUp"></i>
+                        <i class="ib icon icon-arrow   arrowUp"></i>
                     </div>
 
                     <div class="text-center wrapper">
@@ -140,7 +140,7 @@
 
                     <div class="text-center wrapper">
                         <div class="ib" style="position: relative;">
-                            <div class="ib circle-middle"   style="border-color: #fff;">
+                            <div class="ib circle-middle-wo all-img"   style="border-color: #fff;">
                                 <i class="ib all-img women"></i>
                             </div>
 
@@ -157,13 +157,13 @@
                                     <i class="trans-right white trans ib"></i><span>谯美美是时刻关心你的习悦人力</span>
                                 </li>
                                 <li class="text-center">
-                                    <i class="trans-right white trans ib"></i><span>，她会时刻给你创造惊喜哦~</span>
+                                    <span>，她会时刻给你创造惊喜哦~</span>
                                 </li>
                                 <li class="text-center">
                                     <i class="trans-right white trans ib"></i><span>快看看谯美美和习悦会擦出怎样</span>
                                 </li>
                                 <li>
-                                    <i class="trans-right white trans ib"></i> <span>的火花呢?</span>
+                                     <span>的火花呢?</span>
                                 </li>
 
                             </ul>
