--- a/question.html
+++ b/question.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="src/css/question.css"/>
     <script src="src/js/common/zepto_base.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="src/js/common/loader.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="src/js/common/weixin.js"></script>
     <script type="text/javascript" src="src/js/common/template.js"></script>
 
     <style  type="text/css">
