--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="email" content="920825209@qq.com"/>
     <meta name="Description" content="习悦校招答题 习悦校招答题"/>
 
-    <title>习悦校招答题</title>
+    <title>西安习悦信息技术有限公司之谯美美与习悦的故事</title>
 
 
     <link rel="stylesheet" type="text/css" href="dist/css/all-min.css"/>
